tests/integration_tests/snapshots/integration_tests__e2e_tests__get_lanon_voting_signatures_with_failures-non-voting-transactions.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: all_nonvoting_transactions.value.items.len()
---
100
