tests/integration_tests/snapshots/integration_tests__e2e_tests__lamport_transfers-payer-accounts.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "hash": "V4jB1ABCHKhEpNioqRyqaTTbPLBvgi7mpr357huXu8C",
        "address": null,
        "data": null,
        "owner": "8RF3tGXpNbr9wL4bk24tA9PNFYWwiJu3Ski1wvfCtHcD",
        "lamports": 999998000,
        "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
        "leafIndex": 3,
        "seq": 4,
        "slotCreated": 0
      }
    ],
    "cursor": null
  }
}
