tests/integration_tests/snapshots/integration_tests__e2e_tests__lamport_transfers-receiver-accounts.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "hash": "WtTmKGafkpBYbCeHsnLRBV97zWXYT8p91geMFQbDzxY",
        "address": null,
        "data": null,
        "owner": "4Y9xHaihpNo3H8tM9CAkBj6sCKS8mdirWArNGomXWS7m",
        "lamports": 1000,
        "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
        "leafIndex": 2,
        "seq": 3,
        "slotCreated": 0
      },
      {
        "hash": "29ixTY1gc1jjuFuBbqkWiM6sCBG8Y48sPDR5YvZm9mor",
        "address": null,
        "data": null,
        "owner": "4Y9xHaihpNo3H8tM9CAkBj6sCKS8mdirWArNGomXWS7m",
        "lamports": 1000,
        "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
        "leafIndex": 4,
        "seq": 5,
        "slotCreated": 0
      }
    ],
    "cursor": null
  }
}
