tests/integration_tests/snapshots/integration_tests__e2e_tests__nullfiier_and_address_queue_transactions-accounts.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "hash": "i49LfvzUcYoR1pookvJAnNmaWEW7yncty3UwWQjy6Nk",
        "address": null,
        "data": null,
        "owner": "Ecs89dz8NsNoSxyUtp54G2HPbmvJr8qZnxnWUqiLT92r",
        "lamports": 555289324,
        "tree": "smt1NamzXdq4AMqS2fS2F1i5KTYPZRhoHgWx38d8WsT",
        "leafIndex": 2,
        "seq": 3,
        "slotCreated": 0
      }
    ],
    "cursor": null
  }
}
